<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <ImageView
        android:layout_marginTop="10dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_textview_nome_text" />

    <EditText
        android:id="@+id/login_edittext_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_edittext_nome_hint" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_textview_email_text" />

    <EditText
        android:id="@+id/login_edittext_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_edittext_email_hint" />

    <Button
        android:id="@+id/login_button_entrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button_entrar_text" />

</LinearLayout>